[gd_scene format=3 uid="uid://dedv0ktyo6t7i"]

[ext_resource type="Script" uid="uid://brphc5thvesds" path="res://scripts/ui/main_menu.gd" id="1_1g8jr"]
[ext_resource type="Texture2D" uid="uid://420eqactnkvq" path="res://assets/sprites/pixelart/RADL_Book.png" id="2_m1kxf"]
[ext_resource type="FontFile" uid="uid://dufptlp2sj61u" path="res://assets/fonts/Minecraft.ttf" id="3_x2yvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.61960787, 0.61960787, 0.61960787, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control" unique_id=1075492986]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g8jr")

[node name="ColorRect" type="ColorRect" parent="." unique_id=527405005]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14248824, 0.0921843, 0.097628884, 1)

[node name="RadlBook" type="Sprite2D" parent="." unique_id=1799432172]
position = Vector2(247, 138)
scale = Vector2(1.4894737, 1.3875)
texture = ExtResource("2_m1kxf")
hframes = 7

[node name="page_one" type="Control" parent="RadlBook" unique_id=1482306137]
visible = false
layout_mode = 3
anchor_left = 0.089
anchor_top = 0.17500001
anchor_right = 0.86300004
anchor_bottom = 0.87500006
offset_left = -94.91
offset_top = -80.0
offset_right = -96.97
offset_bottom = -83.000015

[node name="btn_start" type="Button" parent="RadlBook/page_one" unique_id=518991715]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08800001
anchor_top = 0.36600003
anchor_right = 0.43300003
anchor_bottom = 0.528
offset_left = 0.11632919
offset_top = -3.7498512
offset_right = 54.3524
offset_bottom = 10.592152
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.425, 0.425)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.23392558, 0.2339254, 0.23392543, 1)
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
text = "Start"
icon_alignment = 1

[node name="btn_load" type="Button" parent="RadlBook/page_one" unique_id=1674482771]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.462
anchor_right = 0.416
anchor_bottom = 0.61200005
offset_left = -9.362296
offset_top = 18.9393
offset_right = 60.64821
offset_bottom = 34.589294
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.425, 0.425)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.23392558, 0.2339254, 0.23392543, 1)
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
text = "Load"
icon_alignment = 1

[node name="btn_host" type="Button" parent="RadlBook/page_one" unique_id=1743968602]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.592
anchor_top = 0.33
anchor_right = 0.90900004
anchor_bottom = 0.5
offset_left = 2.2306595
offset_top = 0.17414093
offset_right = 63.686127
offset_bottom = 13.644142
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.425, 0.425)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.23392558, 0.2339254, 0.23392543, 1)
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
text = "Host"
icon_alignment = 1

[node name="btn_join" type="Button" parent="RadlBook/page_one" unique_id=1122697529]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.537
anchor_top = 0.5
anchor_right = 0.80500007
anchor_bottom = 0.65000004
offset_left = 10.877052
offset_top = 15.332146
offset_right = 81.01723
offset_bottom = 30.98214
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.425, 0.425)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.23392558, 0.2339254, 0.23392543, 1)
theme_override_fonts/font = ExtResource("3_x2yvf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
text = "Join"
icon_alignment = 1

[node name="txt_solo" type="RichTextLabel" parent="RadlBook/page_one" unique_id=1418583245]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.045
anchor_right = 0.42400002
anchor_bottom = 0.20600002
offset_left = -1.9319973
offset_top = 1.96
offset_right = -1.9989929
offset_bottom = 1.9279976
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_x2yvf")
text = "solo"
fit_content = true
scroll_active = false

[node name="txt_multi" type="RichTextLabel" parent="RadlBook/page_one" unique_id=1614456718]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.62600005
anchor_top = 0.054
anchor_right = 0.89300007
anchor_bottom = 0.21400002
offset_left = 1.9779968
offset_top = 0.95199966
offset_right = 2.0579987
offset_bottom = 1.0319977
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_x2yvf")
text = "multi
"
fit_content = true
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=1383778941]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 12.0
offset_right = 62.0
offset_bottom = 52.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("3_x2yvf")
text = "Click on the book"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
